--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -50,3 +50,8 @@ word = {Central Unit Process},
 definition ={Unidad de procesos de un computador, es el elemento encargado de realizar las operaciones aritmeticológicas necesarias para el correcto funcionamiento del mismo},
 short = {CPU},
 }
+
+@GLOSDEF{KERNEL,
+word ={Kernel},
+definition={Traducción al español: Núcleo; En informática se refiere al elemento central de un programa, generalmente un Sistema Operativo},
+}
