--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -55,7 +55,7 @@ Vamos a seguir un órden, de menor a mayor nivel, comenzaremos con el \emph{hard
 Quizás lo primero que tengamos que hacer es explicar el encabezado del apartado, ¿Por qué \emph{\textquotedblleft harware real\textquotedblright}.\\
 Para contestar a esto es necesario conocer los componentes de una máquina virtual (\textit{Véase apartado \ref{apartadomaqvir}}), pues esta tiene también elementos hardware y el calificativo \emph{\textquotedblleft real\textquotedblright} es lo que los diferencia.\\
 
-Este elemento hardware se refiere, como es obvio, al computador físicamente hablando, es decir, al aparato electrónico generalmente conectado a una toma de luz y sus componentes físicos: l memoria RAM, el \gloss[short]{HDD}  y su \gloss[short]{CPU}. Por tanto, a partir de ahora vamos a representar el hardware como:
+Este elemento hardware se refiere, como es obvio, al computador físicamente hablando, es decir, al aparato electrónico generalmente conectado a una toma de luz y sus componentes físicos: la memoria RAM, el \gloss[short]{HDD}  y su \gloss[short]{CPU}. Por tanto, a partir de ahora vamos a representar el hardware como:
 
 \begin{figure}[H]
 \begin{center}
@@ -76,7 +76,7 @@ Cualquier sistema operativo se puede descomponer en los archivos del sistema o \
 \caption[Sistema Operativo huésped]{Esquema de componentes de un Sistema Operativo \emph{host} o huésped}
 \end{figure}
 
-Cabe destacar que se trata de una manera un poco redundante, tal y cómo estaba representado antes el sistema operativo nos bastaba, y por ello nos vamos a quedar con esta representación:
+Cabe destacar que el hardware se comunica con el sistema operativo a traves de su \emph{kernel} y que cómo estaba representado antes el sistema operativo nos bastaba y esta representación profundiza en término que a nosotros no nos interesan, vamos a quedar con esta representación a partir de ahora:
 
 \begin{figure}[H]
 \begin{center}
@@ -86,7 +86,7 @@ Cabe destacar que se trata de una manera un poco redundante, tal y cómo estaba 
 \end{figure}
 
 \subsection{Hipervisor}
-Ahora nos centramos en el meollo de asunto, pero,en realidad,¿nos es relevante el contenido del \gloss{HYP} o \gloss[long]{VMM}?\\
+Ahora nos centramos en el meollo de asunto, pero,en realidad, ¿Nos es relevante el contenido del \gloss{HYP} o \gloss[long]{VMM}?\\
 
 Para lo que nosotros vamos a profundizar y a lo que queremos llegar, nos es completamente irrelevante, pero como nunca está de más conocer cosas nuevas simplemente vamos a decir los componentes de un hipervisor varían según el \emph{\textquotedblleft fabricante\textquotedblright} y el tipo.\\
 
