--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -1,6 +1,5 @@
 \lettrine[lines=1,slope=4pt,findent=0pt]{E}{}sto es un prefacio.\\
 
-\color{black}
 \section{Objetivos y motivaciones}
 Tanto en el ámbito informático académico como en el profesional, en ocasiones puede ser necesario un cambio de sistema operativo a la hora de trabajar. Esto puede estar ocasionado tanto por requisitos del lenguaje a utilizar, por una arquitectura más adecuada o simplemente por cuestión de preferencias. Pero estos cambios implicarían una CPU para cada sistema operativo, lo que lo haría terriblemente ineficiente desde el punto de vista económico, ergonómico y logístico. \\
 Por ello es necesario conocer la arquitectura del software que permita escoger entre más de un sistema operativo, y que el adicional (aún sin llegar al nivel de eficiencia del sistema nativo) trabaje a un nivel óptimo.\\
@@ -15,10 +14,9 @@ Por tanto los dos principales objetivos de la práctica serán:
 Debido a las dos partes claramente diferenciadas e la práctica, se harán dos secciones claramente diferenciadas :
 \begin{itemize}
 \item Parte de OBSERVACIÓN: en la que tras una pequeña introducción se detallará la arquitectura del sistema escogido
-\item Parte de DISEÑO: \color{red} UNA VEZ ACABADOS LOS REQUISITOS, UML Y DEMÁS ACTUALIZAR ESTA SECCIÓN
+\item Parte de DISEÑO: \textcolor{red}{UNA VEZ ACABADOS LOS REQUISITOS, UML Y DEMÁS ACTUALIZAR ESTA SECCIÓN}
 \end{itemize}
 
-\color{black}
 \section{GitHub}
 Para la realización de esta práctica hemos utilizado el software \textbf{GitHub}, propiedad de 	{GitHub Inc}, el cual nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso. Hemos elegido usar GitHub por los siguientes motivos:
 \begin{itemize}
