--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -1,4 +1,4 @@
-\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}sto es un prefacio.\\
+{\color{red}\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}sto es un prefacio.}\\
 
 \section*{Objetivos y motivaciones}
 Tanto en el ámbito informático académico como en el profesional, en ocasiones puede ser necesario un cambio de sistema operativo a la hora de trabajar. Esto puede estar ocasionado tanto por requisitos del lenguaje a utilizar, por una arquitectura más adecuada o simplemente por cuestión de preferencias. Pero estos cambios implicarían una CPU para cada sistema operativo, lo que lo haría terriblemente ineficiente desde el punto de vista económico, ergonómico y logístico. \\
@@ -17,13 +17,16 @@ Debido a las dos partes claramente diferenciadas e la práctica, se harán dos s
 \item Parte de DISEÑO: \textcolor{red}{UNA VEZ ACABADOS LOS REQUISITOS, UML Y DEMÁS ACTUALIZAR ESTA SECCIÓN}
 \end{itemize}
 
-\section*{GitHub}
+\section*{¿Por qué GitHub?}
 Para la realización de esta práctica hemos utilizado el software \textbf{GitHub}, propiedad de 	{GitHub Inc}, el cual nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso. Hemos elegido usar GitHub por los siguientes motivos:
 \begin{itemize}
 	\item Es un conocido programa para desarrolladores de software, lo que nos ha permitido trabajar de una forma profesional.
 	\item Al ser un alto número los integrantes del grupo, nos ha sido más fácil y sencillo trabajar mediante repositorios. 
 	\item Pero principalmente debido a que dicho programa sigue una arquitectura de pizarra y soporta el conocido framework ``Ruby on Rails", lo que nos acercaba a un entorno práctico a los dos aspectos a tratar en la práctica: los framework y la arquitectura de pizarra.
 \end{itemize}
+
+\section*{¿Por qué \LaTeX?}
+\LaTeX~ es un sistema de composición de textos profesional que permite separar de forma fácil un único archivo en varios, de forma que trabajar de forma distribuida sea bastante cómoda. Además, los archivos son texto plano por lo que, junto a GitHub, hace que se pueda ver qué se ha añadido o borrado en un documento de forma sencilla. También es un sistema que separa el contenido de la presentación, por lo que facilita centrarse en el contenido y no tanto en su presentación.\\
 
 \color{red}
 FALTA:
