Revisados cap 1 y 2 parte B
Corregidas algunas erratas y errores.

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -12,7 +12,7 @@ Para entender en concepto básico de esta arquitectura basta con fijarse en su n
 
 Siguiendo con este ejemplo, en una resolución de problemas cualquiera encontraríamos a varias personas trabajando sobre una misma pizarra, a estos elementos en la arquitectura de pizarra se les conoce cómo \emph{agentes} y \emph{pizarra}, respectivamente.\\
 
-Siendo un poco más técnicos podemos definir estos dos componentes cómo:
+Siendo un poco más técnicos podemos definir estos dos componentes como:
 
 \begin{itemize}
 	\item \textbf{Pizarra: }Instrumento de control o estructura de datos que representa el estado actual de la plataforma.
