--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -60,7 +60,7 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 		\item La pizarra debe reconocer los tipos de archivo de los elementos.
 		\item La pizarra debe ser capaz de comparar dos archivos con el objetivo de buscar diferencias.
 		\item La pizarra debe permitir realizar una búsqueda de un archivo por su nombre.
-		\item La pizarra debe permitir ser configurada como "pública" o "privada".
+		\item La pizarra debe permitir ser configurada como ``pública'' o ``privada''.
 	\end{enumerate}
 \subsubsection{Requisitos no funcionales}
 \textbf{De producto}
