Corregidas algunas erratas

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -28,8 +28,8 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 		\item La plataforma se gestiona mediante usuarios.
 		\item La plataforma permitirá la creación de nuevos usuarios.
 		\item La plataforma debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, porcentajes, etc
-		\item El plataforma pedirá los credenciales del usuario al comenzar.
-		\item El plataforma se encargará de revisar la veracidad de los credenciales del usuario.
+		\item La plataforma pedirá los credenciales del usuario al comenzar.
+		\item La plataforma se encargará de revisar la veracidad de los credenciales del usuario.
 		\item El agente adquirirá permisos y funciones dependiendo del usuario que lo ese usando.
 	\end{enumerate}
 \subsubsection{Requisitos no funcionales}
@@ -37,8 +37,8 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 	\begin{enumerate}
 		\item La plataforma debe bloquear a los usuarios para que no puedan acceder a problemas que no se les han asignado.
 		\item La plataforma debe almacenar una contraseña y un identificador único para cada usuario y no permitir que otros accedan.
-		\item La plataforma debe permitir a los usuarios de mayor nivel, bloquear contenido.
-		\item Por seguridad para los usuarios deben proteger su cuenta con una contraseña de más de 6 caracteres.
+		\item La plataforma debe permitir a los usuarios de mayor nivel bloquear contenido.
+		\item Por seguridad los usuarios deben proteger su cuenta con una contraseña de más de 6 caracteres.
 		\item La plataforma no revelará información personal acerca de los usuarios a parte del nombre.
 		\item Cada usuario accederá a la pizarra a través de un agente.
 	\end{enumerate}
