--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -28,7 +28,7 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 		\item La plataforma se gestiona mediante usuarios.
 		\item La plataforma permitirá la creación de nuevos usuarios.
 		\item La plataforma debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, porcentajes, etc
-		\item La plataforma pedirá los credenciales del usuario al comenzar.
+		\item La plataforma pedirá las credenciales del usuario al comenzar.
 		\item La plataforma se encargará de revisar la veracidad de los credenciales del usuario.
 		\item El agente adquirirá permisos y funciones dependiendo del usuario que lo ese usando.
 	\end{enumerate}
