[UPDATE] Actualizado diagramas.tex

--- a/memoria/diagramas.tex
+++ b/memoria/diagramas.tex
@@ -1,9 +1,8 @@
 % Aquí van todos los diagramas UML
 \usepackage{tikz-uml}
 
-\begin{document}
-
 % Diagrama de clases
+\newcommand{\clases}{
 \begin{figure}
 \centering
 \begin{tikzpicture}
@@ -166,4 +165,4 @@
 
 \end{tikzpicture}
 \end{figure}
-\end{document}
+}
