Añadidos diagramas de actividad
TODO: Quedan por hacer los diagramas de actividad de lectura/escritura,
estadísticas, crear usuario y gestionar permisos y el diagrama de casos
de usos.
También hay que redimensionar el diagrama de clases para que quepa en
una hoja.

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -16,9 +16,10 @@
 \usepackage{emptypage} % Para eliminar encabezado de las páginas en blanco
 \usepackage{chngcntr}
 \usepackage{etoolbox}
-
+\usepackage{./tikz-uml} % De esta forma no hay que añadir paquete al directorio de LaTeX
 
 \input{comandos}
+\input{diagramas}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \usepackage[colorlinks=true,linkcolor=black,urlcolor=black,citecolor=black]{hyperref}
