--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -78,3 +78,83 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 		\item La comunicación entre la pizarra y el agente (modelo cliente-servidor) será a través del protocolo HTTP.
 		\item La pizarra no revelará información acerca de los agentes, excepto su nombre y número de referencia.
 	\end{enumerate}
+	
+{\color{red}{\huge PROVISIONAL}}
+
+\begin{figure}[!h]
+\centering
+\clases
+\caption{Diagrama de clases}
+\end{figure}
+
+\begin{figure}[!h]
+\centering
+\actualizarPizarra
+\caption{Actualizar pizarra}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\buscar
+\caption{Buscar}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\comparar
+\caption{Comparar}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\configurarPizarra
+\caption{Configurar pizarra}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\crearCarpeta
+\caption{Crear carpeta}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\comprobarNivel
+\caption{Comprobar nivel}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\escribir
+\caption{Escribir}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\iniciarSesion
+\caption{Iniciar sesión}
+\end{figure}
+\newpage
+
+
+\begin{figure}[!h]
+\centering
+\leer
+\caption{Leer}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\mostrarEstado
+\caption{Mostrar estado}
+\end{figure}
+\newpage
+
