Añadidos diagramas de actividad restantes

--- a/memoria/diagramas/diag_actividad.tex
+++ b/memoria/diagramas/diag_actividad.tex
@@ -5,7 +5,11 @@
 \input{./diagramas/diag_actividad/configurar_pizarra}
 \input{./diagramas/diag_actividad/crear_carpeta}
 \input{./diagramas/diag_actividad/comprobar_nivel}
+\input{./diagramas/diag_actividad/crear_usuario}
 \input{./diagramas/diag_actividad/escribir}
+\input{./diagramas/diag_actividad/lectura_escritura}
+\input{./diagramas/diag_actividad/estadisticas}
+\input{./diagramas/diag_actividad/gestionar_permisos}
 \input{./diagramas/diag_actividad/iniciar_sesion}
 \input{./diagramas/diag_actividad/leer}
 \input{./diagramas/diag_actividad/mostrar_estado}
