--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -131,8 +131,43 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 
 \begin{figure}[!h]
 \centering
+\comprobarNivel
+\caption{Comprobar nivel}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\crearUsuario
+\caption{Crear usuario}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
 \escribir
 \caption{Escribir}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\lecturaEscritura
+\caption{Lectura/Escritura}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\estadisticas
+\caption{Estadísticas}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\gestionarPermisos
+\caption{Gestionar permisos}
 \end{figure}
 \newpage
 
@@ -142,7 +177,6 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 \caption{Iniciar sesión}
 \end{figure}
 \newpage
-
 
 \begin{figure}[!h]
 \centering
