--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -17,6 +17,7 @@
 \usepackage{chngcntr}
 \usepackage{etoolbox}
 \usepackage{./tikz-uml} % De esta forma no hay que añadir paquete al directorio de LaTeX
+\usepackage{lscape} % Para una mejor visualización en el pdf se puede usar \usepackage{pdflscape}
 
 \input{comandos}
 \input{diagramas}
