--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -81,11 +81,13 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 	
 {\color{red}{\huge PROVISIONAL}}
 
+\begin{landscape}
 \begin{figure}[!h]
 \centering
 \clases
 \caption{Diagrama de clases}
 \end{figure}
+\end{landscape}
 
 \begin{figure}[!h]
 \centering
