Comenzada introducción a los diagramas UML
Explico brevemente lo que es UML y doy pie a los diagramas. Sigo con
ello.

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -79,6 +79,19 @@ Para que el diseño quede más claro se han separado los requisitos en dos apart
 		\item La pizarra no revelará información acerca de los agentes, excepto su nombre y número de referencia.
 	\end{enumerate}
 	
+\section{Modelado UML}
+Tras la extracción de los requisitos es necesario documentar la estructura de cada una de las partes que componen la plataforma a crear. Para esto usamos el lenguaje de modelado UML.\\
+
+UML es un lenguaje de modelado para visualizar, especificar y documentar de forma gráfica cada una de las partes del desarrollo software. \\
+
+En primer lugar diseñaremos un diagrama de clases que permita una visión general de las clases que componen la plataforma y su relación, para después incluir \color{red}un diagrama de casos de uso \color{black}que permite ver de una forma más detallada los requisitos extraídos anteriormente así como su relación con los distintos actores. Para finalizar Analizaremos de forma detallada y mediante diagramas de flujo cada uno de los casos de uso resultantes.\\
+
+\subsection{Diagrama de clases}
+un diagrama de clases es un diagrama estático destinado a la programación orientada a objetos que permite describir las clases de un sistema, así como sus propiedades, operaciones, relaciones entre ellas y herencia.\\
+
+
+
+
 {\color{red}{\huge PROVISIONAL}}
 
 \begin{landscape}
