--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -4,11 +4,21 @@ Una vez especificados los requisitos de nuestra pizarra, además de los UML nece
 \section{Consideraciones previas}
 \color{red}QUE ESTÉ TODO ACTUALIZADO, BIEN CONFIGURADO Y Y BLA BLA BLA
 \color{black}
-\section{Identificación e ingreso}
-En primer lugar un usuario tendrá que conectarse mediante su "USERID" y "PASS". Si ambas son correctas, ya se habrá conectado a la pizarra en su nivel correspondiente.
-Una vez dentro, podrá consultar las estadísticas (tanto a nivel de usuario como generales), buscar y comparar archivos y BLA BLA BLA.
+\section{Uso de la librería}
+\subsection{Iniciar sesión}
+En primer lugar un usuario tendrá que conectarse mediante su "USERID" y "PASS". Para ello es necesario el método IniciarSesión(userid String, pass String:Bool;) el cual devolverá 1 si amboas cadenas de texto son correctas y se corresponden con un usuario almacenado en las bases de datos. Por el contrario se devolverá 0 si no coinciden alguna de las dos.
 A continuación se especifican de manera más específica el uso de las instrucciones in y out
-\section{Cargar}
-\section{Guardar}
+\subsection{Actualizar pizarra}
+\subsection{Comparar}
+\subsection{Configurar}
+\subsection{Crear carpeta}
+\subsection{Comprobar nivel}
+\subsection{Crear usuario}
+\subsection{Escribir}
+\subsection{Lectura/escritura}
+\subsection{Estadísticas}
+\subsection{Gestionar permisos}
+\subsection{Leer}
+\subsection{Mostrar estado}
 
 
