Añadido comprobar nivel

--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -12,7 +12,7 @@ A continuación se especifican de manera más específica el uso de las instrucc
 \subsection{Comparar}
 \subsection{Configurar}
 \subsection{Crear carpeta}
-\subsection{Comprobar nivel}
+\subsection{Comprobar nivel}Tras pedir los datos de usuario mediante get(nombre) y get(userid), se conecta a la base de datos para obtener la información requerida, en este caso el nivel del usuario, mediante getNivel():Nivel. Finalmente se muestran las distintas opciones de nivel con cambiarPermiso(int,bool);
 \subsection{Crear usuario}
 \subsection{Escribir}
 \subsection{Lectura/escritura}
