Añadido diagrama de casos de uso

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -120,6 +120,14 @@ A continuación detallamos cada una de las clases que aparecen en el diagrama ce
 
 \subsection{Diagrama de casos de uso}
 
+\begin{landscape}
+\begin{figure}[!h]
+\centering
+\casos
+\caption{Diagrama de casos de uso}
+\end{figure}
+\end{landscape}
+
 \begin{figure}[!h]
 \centering
 \actualizarPizarra
