--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -18,6 +18,7 @@
 \usepackage{etoolbox}
 \usepackage{./tikz-uml} % De esta forma no hay que añadir paquete al directorio de LaTeX
 \usepackage{lscape} % Para una mejor visualización en el pdf se puede usar \usepackage{pdflscape}
+\usepackage[T1]{fontenc}
 
 \input{comandos}
 \input{diagramas}
