Introducido diagrama de casos de uso y de flujo
Solo estoy metiendo algo de contenido. La estructura ya se verá. Si es
necesario moverlo a diseño no es gran problema. Un copy paste y listo.

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -119,6 +119,14 @@ A continuación detallamos cada una de las clases que aparecen en el diagrama ce
 \end{landscape}
 
 \subsection{Diagrama de casos de uso}
+Un diagrama de casos de uso permite la visualización de las actividades que se permite realizar la plataforma. A estas actividades se las denomina \textit{casos de uso}. El diagrama de casos de uso define también los actores o roles que interactúan con la aplicación y las relaciones que existen entre los distintos casos de uso. Las relaciones pueden ser de dos tipos:
+
+\begin{itemize}
+	\item \textbf{Inclusión:} Un caso de uso depende del resultado de otro.
+	\item \textbf{Extensión:} Un caso de uso se extiende en otros casos que, son esencialmente similares pero varían ligeramente su comportamiento.
+\end{itemize}
+
+\color{red} Se explica el diagrama\color{black}
 
 \begin{landscape}
 \begin{figure}[!h]
@@ -127,6 +135,14 @@ A continuación detallamos cada una de las clases que aparecen en el diagrama ce
 \caption{Diagrama de casos de uso}
 \end{figure}
 \end{landscape}
+
+\subsection{Diagramas de flujo}
+Un diagrama de flujo es una representación de un proceso de forma gráfica. Consta de una serie de símbolos que representan los distintos pasos a seguir y flechas que indican el flujo de ejecución que se sigue.\\
+
+Como es común hemos realizado un diagrama de flujo para cada uno de los casos de uso que aparecen en el diagrama anterior.
+
+\color{red} Se explica cada diagrama\color{black}
+
 
 \begin{figure}[!h]
 \centering
