Añadido paquete lmodern
Con este paquete se consigue un mejor renderizado de la fuente al usar
T1 (hay que usar este tipo de fuente para que se vea correctamente el
diagrama de casos de uso).

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -18,7 +18,8 @@
 \usepackage{etoolbox}
 \usepackage{./tikz-uml} % De esta forma no hay que añadir paquete al directorio de LaTeX
 \usepackage{lscape} % Para una mejor visualización en el pdf se puede usar \usepackage{pdflscape}
-\usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc} % Necesario para que se vea el diagrama de casos de uso
+\usepackage{lmodern} % Mejor renderizado al generar el pdf
 
 \input{comandos}
 \input{diagramas}
