Acabado capítulo3 Parte I
Se ha terminado el penúltimo capítulo de la primera parte.
FALTA

* Figuras.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -6,9 +6,19 @@ OPTedition = {7},
 pages = {45 - 65},
 }
 
-@misc{vmware,
-title = {Página oficial de {VM}ware},
-howpublished={\url{http://www.vmware.com/es/}},
+@misc{vmwareinst,
+title = {Guía de instalación de {VM}ware {W}orkstation 5.5},
+howpublished={\url{https://www.vmware.com/support/ws55/doc/ws_newguest_setup_simple_steps.html}},
+}
+
+@misc{vmwareinst,
+title = {Guía de instalación de {VM}ware {W}orkstation 5.5},
+howpublished={\url{https://www.vmware.com/support/ws55/doc/ws_newguest_setup_simple_steps.html}},
+}
+
+@misc{vmwareinst2,
+title = {Guía de instalación de Windows XP en una{M}áquina virtual {VM}ware},
+howpublished={\url{https://www.vmware.com/support/ws5/doc/new_guest_example_ws.html}},
 }
 
 @misc{vmwarework,
