--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -6,6 +6,11 @@ OPTedition = {7},
 pages = {45 - 65},
 }
 
+@misc{vmware,
+title = {Página oficial de {VM}ware},
+howpublished={\url{http://www.vmware.com/es/}},
+}
+
 @misc{vmwareinst,
 title = {Guía de instalación de {VM}ware {W}orkstation 5.5},
 howpublished={\url{https://www.vmware.com/support/ws55/doc/ws_newguest_setup_simple_steps.html}},
