Acabada primera parte
FALTA:
* Alguna figura

--- a/memoria/partes/a/capitulo4.tex
+++ b/memoria/partes/a/capitulo4.tex
@@ -1,1 +1,14 @@
 \chapter{Concluisiones}
+\lettrine[lines=1,slope=4pt,findent=0pt]{C}{}omo no podía ser de otra manera, y a modo de aportar nuestra opinión, añadimos en este capítulo las conclusiones obtenidas durante el desarrollo de esta primera parte de la práctica.\\
+
+En primer lugar nos gustaría recalcar que aunque los sistemas de la universidad \emph{\textquotedblleft aparentemente\textquotedblright} poseen grandes ventajas que se han ido comentando a lo largo de este documento, también poseen desventajas que hacen que ninguno de nosotros prefiera un ordenador de la universidad a uno propio.\\
+
+Uno de estos impedimentos a los que nos referimos es a la capacidad de los ordenadores de almacenar datos, estos sólo perduran durante la sesión actual, esto significa, para muchos, auténticos quebraderos de cabeza pues si no se guardan los archivos que se hayan modificado en un lugar seguro (\emph{en: tu cuenta de dropbox, mega, correo, pendrive}) y apagas el ordenador, cierras sesión o se va la luz; éstos desaparecen, cosa que hace que trabajar con dichas máquinas sea una tarea difícil.\\
+
+El término \emph{ordenador} tan sólo es usado en España entre los países hispanohablantes, proviene de \emph{ordinateur}, palabra francesa, es por tanto un galicismo que significa que \emph{ordena} u organiza datos, pero resulta que éstos no pueden ser guardados, cosa que resulta un tanto inútil. Esto es debido a que las máquinas virtuales están virtualizadas a través de un servidor y este tiene un espacio finito, bastante inferior al de todos los ordenadores de la universidad.\\
+
+Por otro lado, nos ha resultado de lo más interesante averiguar cómo están funcionando actualmente los ordenadores de la universidad. Este proceso de ingeniería inversa nos ha propuesto grandes retos, que creemos que hemos sido capaces de afrontar con alguna dificultad.\\
+
+En resumen, nos ha gustado mucho el proceso que hemos seguido para entender los sistemas de virtualización, con los que hemos aprendido bastante, pero no nos ha agradado saber que la universidad pudiese utilizar otros métodos de virtualización que aportarían lo mismo que el sistema actual, con el añadido que harían que trabajar con ellos fuera de una manera más amena, empezando por pasar a un sistema de virtualización de primer nivel y con un sistema de revisiones periódico para las modificaciones de las máquinas virtuales, por ejemplo: Que cada día a las 22:00 (tras cerrar la universidad) el servidor donde se almacenan los datos de las VM busque actualizaciones y demás, al iniciar cada ordenador compruebe si posee la ultima versión de los datos de la VM, y si no es así que actualice.\\
+
+Por lo tanto, un sistema de virtualización adecuado, puede hacer obtener un mayor control sobre un sistema a la par que se obtiene un mayor rendimiento.
